<resources>
    <string name="app_name">Student Grade</string>
    <string name="title_grade_screen">Grade</string>
    <string name="title_student_screen">Student</string>


    <string name="label_outstanding_grade">Outstanding (9-10)</string>
    <string name="label_mention_grade">Mention (7–8)</string>
    <string name="label_pass_grade">Pass (5–6)</string>
    <!--<string name="label_fail_grade">Fail (0–4)</string>-->

    <string name="placeholder_student_grade">\?</string>
    <string name="default_student_grade">0</string>
    <string name="title_student_grade">Student Grade</string>

    <string-array name="data">
        <item>0</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
    </string-array>
</resources>